--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "createReactComponent.js",
   "preferGlobal": "true",
   "bin": {
-    "create-react-component" : "createReactComponent.js"
+    "create-react-component": "createReactComponent.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "change-case": "^2.3.0",
-    "commander": "^2.9.0"
+    "commander": "^2.9.0",
+    "param-case": "^2.1.1"
   }
 }
